Fixed issues with spacing of elements in JS modals
Fixed issues with spacing of elements in JS modals. Added more padding to elements and allowed for overflow.

--- a/main.css
+++ b/main.css
@@ -39,7 +39,7 @@ body {
     position: fixed;
     top: 0;
     left: 0;
-    padding: 10px;
+    padding: 20px;
     background: white;
     font-family: 'Lexend Deca', sans-serif;
     width: 100%;
@@ -84,9 +84,9 @@ h1 {
 
 ul {
     font-size: 20px;
-    min-width: 600px;
-    margin: 10px 0;
-    padding: 10px;
+    min-width: 800px;
+    margin: 10px;
+    padding: 20px 10px 10px;
     background: white;
     font-family: 'Lexend Deca', sans-serif;
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.25);
@@ -107,8 +107,9 @@ ul li.star {
     outline: rgb(0, 56, 139) 1px solid;
 }
 
-ul li.completed {
+ul li.completed span {
     color: grey;
+    text-decoration: line-through;
 }
 
 li button, li select {
@@ -134,6 +135,7 @@ li span {
     display: block;
     float: right;
     margin-bottom: 10px;
+    width: 100%;
 }
 
 #listContainer {
@@ -141,7 +143,7 @@ li span {
     display: grid;
     grid-gap: 10px;
     grid-template-columns: repeat(3, 1fr);
-    margin-top: 120px;
+    margin-top: 140px;
 }
 
 
